Added some additional metadata to README

--- a/README
+++ b/README
@@ -2,3 +2,6 @@ Solutions to all exercises of C++ Primer Plus, 5th edition, by Stephen Prata.
 This was done back in 2011 to gain familiarity with C++.
 Most of the programs are on the smaller side and are used to 
 gain familiarity with various concepts convered in the chapters.
+
+There are slightly more than 100 programs among the various folders.
+There are also my answers to the review questions, written in LaTeX.
